[Global] Header: Fixed issue with too much margin on cover photos

--- a/resources/css/sass/theme/_theme.scenic-buses.scss
+++ b/resources/css/sass/theme/_theme.scenic-buses.scss
@@ -84,3 +84,15 @@
 .o-content-slot--scenic-enrolment .o-content-slot__block-link {
 	background-image: url(../../images/content-slots/Are-you-an-operator-with-a-scenic-bus-route.jpg);
 }
+
+
+
+
+
+/**
+ * [4]	Header
+ */
+
+.c-title__image-wrap {
+	margin-bottom: 0;
+}
